emnlp published and vid

--- a/pubs.html
+++ b/pubs.html
@@ -484,9 +484,9 @@ href="https://neurips.cc/virtual/2023/poster/70896">publisher link</a>;
 @inproceedings{he2023mitigating,
   title = {Mitigating Backdoor Poisoning Attacks through the Lens of Spurious Correlation},
   author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
-  booktitle = {The 2023 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
   series = {EMNLP},
-  note = {Accepted},
+  pages = {953--967},
   year = {2023},
 }
 </code></pre></div>
@@ -494,9 +494,12 @@ href="https://neurips.cc/virtual/2023/poster/70896">publisher link</a>;
 <ul>
 <li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and
 Trevor Cohn. “Mitigating Backdoor Poisoning Attacks through the Lens of
-Spurious Correlation”. In: <em>The 2023 Conference on Empirical Methods
-in Natural Language Processing</em>. EMNLP. Accepted. 2023 [<a
-href="https://arxiv.org/abs/2305.11596">full</a>;
+Spurious Correlation”. In: <em>Proceedings of the 2023 Conference on
+Empirical Methods in Natural Language Processing</em>. EMNLP. 2023, pp.
+953-967 [<a
+href="https://aclanthology.org/2023.emnlp-main.60.pdf">publisher
+link</a>; <a href="https://arxiv.org/abs/2305.11596">full</a>; <a
+href="https://aclanthology.org/2023.emnlp-main.60.mp4">video</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('he2023mitigating.bib', 'bibtex-he2023mitigating')">BibTeX</a>]</li>
 </ul>
 
