--- a/pubs.html
+++ b/pubs.html
@@ -348,25 +348,6 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-he2024seep">
-@article{he2024seep,
-  title = {{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
-  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
-  journal = {Transactions of the Association for Computational Linguistics (TACL)},
-  year = {2024},
-  note = {Accepted},
-}
-</code></pre></div>
-
-<ul>
-<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and
-Trevor Cohn. “SEEP: Training Dynamics Grounds Latent Representation
-Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
-of the Association for Computational Linguistics (TACL)</em> (2024).
-Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-wang2024backdoor">
 @inproceedings{wang2024backdoor,
   title = {Backdoor Attacks on Multilingual Machine Translation},
@@ -383,9 +364,29 @@ Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib',
 Trevor Cohn. “Backdoor Attacks on Multilingual Machine Translation”. In:
 <em>Proceedings of the 2024 Conference of the North American Chapter of
 the Association for Computational Linguistics: Human Language
-Technologies</em>. NAACL. Accepted. 2024 [<a
+Technologies</em>. NAACL. Accepted. 2024 [<span
+style="color:red">Selected as Oral (15% of accepted papers)</span>; <a
 href="https://arxiv.org/abs/2404.02393">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2024seep">
+@article{he2024seep,
+  title = {{SEEP}: Training Dynamics Grounds Latent Representation Search for Mitigating Backdoor Poisoning Attacks},
+  author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  journal = {Transactions of the Association for Computational Linguistics (TACL)},
+  year = {2024},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and
+Trevor Cohn. “SEEP: Training Dynamics Grounds Latent Representation
+Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
+of the Association for Computational Linguistics (TACL)</em> (2024).
+Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
