--- a/pubs.html
+++ b/pubs.html
@@ -434,6 +434,25 @@ href="https://arxiv.org/abs/2404.19597">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-rekavandi24rsreg">
+@misc{rekavandi24rsreg,
+  title = {{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
+  author = {Aref Miri Rekavandi and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note = {arXiv:2405.08892 [cs.LG]},
+  year = {2024},
+  month = {May},
+}
+</code></pre></div>
+
+<ul>
+<li>Rekavandi, Aref Miri, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
+<em>RS-Reg: Probabilistic and Robust Certified Regression Through
+Randomized Smoothing</em>. arXiv:2405.08892 [cs.LG]. May. 2024 [<a
+href="https://arxiv.org/abs/2405.08892">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-jin2024elephants">
 @misc{jin2024elephants,
   title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
