--- a/pubs.html
+++ b/pubs.html
@@ -386,7 +386,8 @@ href="https://arxiv.org/abs/2404.02393">PDF</a>;
 Trevor Cohn. “SEEP: Training Dynamics Grounds Latent Representation
 Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
 of the Association for Computational Linguistics (TACL)</em> (2024).
-Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
+Accepted. [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
