elephant to ccs

--- a/pubs.html
+++ b/pubs.html
@@ -328,12 +328,35 @@ Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-jin2024elephants">
+@inproceedings{jin2024elephants,
+  title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
+  author = {Jiankai Jin and Chitchanok Chuengsatiansup and Toby Murray and Benjamin I. P. Rubinstein and Yuval Yarom and Olga Ohrimenko},
+  year = {2024},
+  booktitle = {Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
+  series = {CCS},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Jin, Jiankai, Chitchanok Chuengsatiansup, Toby Murray, Benjamin I.
+P. Rubinstein, Yuval Yarom, and Olga Ohrimenko. “Elephants Do Not
+Forget: Differential Privacy with State Continuity for Privacy Budget”.
+In: <em>Proceedings of the 2024 ACM SIGSAC Conference on Computer and
+Communications Security</em>. CCS. Accepted. 2024 [<a
+href="https://arxiv.org/abs/2401.17628">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('jin2024elephants.bib', 'bibtex-jin2024elephants')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-cullen2023its">
 @inproceedings{cullen2023its,
   title = {It's Simplex! Disaggregating Measures to Improve Certified Robustness},
   author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Erfani and Benjamin I. P. Rubinstein},
   year = {2024},
-  booktitle = {2024 IEEE Symposium on Security and Privacy (SP)},
+  booktitle = {2024 IEEE Symposium on Security and Privacy},
+  series = {SP},
   note = {Accepted},
 }
 </code></pre></div>
@@ -342,7 +365,7 @@ Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>;
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Erfani, and
 Benjamin I. P. Rubinstein. “It’s Simplex! Disaggregating Measures to
 Improve Certified Robustness”. In: <em>2024 IEEE Symposium on Security
-and Privacy (SP)</em>. Accepted. 2024 [<a
+and Privacy</em>. SP. Accepted. 2024 [<a
 href="https://arxiv.org/abs/2309.11005">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023its.bib', 'bibtex-cullen2023its')">BibTeX</a>]</li>
 </ul>
@@ -451,26 +474,6 @@ href="https://arxiv.org/abs/2404.19597">PDF</a>;
 Randomized Smoothing</em>. arXiv:2405.08892 [cs.LG]. May. 2024 [<a
 href="https://arxiv.org/abs/2405.08892">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-jin2024elephants">
-@misc{jin2024elephants,
-  title = {Elephants Do Not Forget: Differential Privacy with State Continuity for Privacy Budget },
-  author = {Jiankai Jin and Chitchanok Chuengsatiansup and Toby Murray and Benjamin I. P. Rubinstein and Yuval Yarom and Olga Ohrimenko},
-  note = {arXiv:2401.17628 [cs.CR]},
-  year = {2024},
-  month = {Jan},
-}
-</code></pre></div>
-
-<ul>
-<li>Jin, Jiankai, Chitchanok Chuengsatiansup, Toby Murray, Benjamin I.
-P. Rubinstein, Yuval Yarom, and Olga Ohrimenko. <em>Elephants Do Not
-Forget: Differential Privacy with State Continuity for Privacy Budget
-</em>. arXiv:2401.17628 [cs.CR]. Jan. 2024 [<a
-href="https://arxiv.org/abs/2401.17628">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('jin2024elephants.bib', 'bibtex-jin2024elephants')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
