--- a/pubs.html
+++ b/pubs.html
@@ -438,6 +438,24 @@ href="https://arxiv.org/abs/2404.08399">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2024adaptive">
+@misc{marchant2024adaptive,
+  title = {Adaptive Data Analysis for Growing Data},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
+  note = {arXiv:2405.13375 [cs.CL]},
+  year = {2024},
+  month = {May},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>Adaptive Data
+Analysis for Growing Data</em>. arXiv:2405.13375 [cs.CL]. May. 2024 [<a
+href="https://arxiv.org/abs/2405.13375">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('marchant2024adaptive.bib', 'bibtex-marchant2024adaptive')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-he2024transferring">
 @misc{he2024transferring,
   title = {Transferring Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with Instruction Tuning},
