space best paper

--- a/pubs.html
+++ b/pubs.html
@@ -432,8 +432,9 @@ Sinnott, Andrew Woods, Chris Bayliss, Kris Ehinger, Ben Rubinstein,
 James Bailey, Airlie Chapman, and Michele Trenti. “Mitigating Challenges
 of the Space Environment for Onboard Artificial Intelligence: Design
 Overview of the Imaging Payload on SpIRIT”. In: <em>3rd Workshop on AI
-for Space</em>. AI4Space. Accepted; co-located with CVPR2024. 2024 [<a
-href="https://arxiv.org/abs/2404.08399">PDF</a>;
+for Space</em>. AI4Space. Accepted; co-located with CVPR2024. 2024
+[<span style="color:red">Best Paper Award (Honourable Mention)</span>;
+<a href="https://arxiv.org/abs/2404.08399">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('ortiz2024mitigating.bib', 'bibtex-ortiz2024mitigating')">BibTeX</a>]</li>
 </ul>
 
