--- a/impact.html
+++ b/impact.html
@@ -802,10 +802,13 @@ Futures strategic plan</a>.</p>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
 <p>Since arriving at the University of Melbourne Oct 2013, I have been
-awarded competitive funding (Cat 1–4) of <strong>$9.42m total</strong>,
-<strong>$6.2m as lead-CI</strong>, $2.87m on a per-CI basis. Funding
+awarded competitive funding (Cat 1–4) of <strong>$10.67m total</strong>,
+<strong>$7.45m as lead-CI</strong>, $3.08m on a per-CI basis. Funding
 includes:</p>
 <ul>
+<li>2024–2026 <strong>$1.25m: DSTG/ASCA</strong> Research Agreement
+Variation, <em>Adversarial Reinforcement Learning: Attacks and
+Defences</em>, Benjamin Rubinstein et al. </li>
 <li>2022–2023 <strong>$215k: Google</strong> Research Funding Agreement,
 <em>Selective Dataflow-Guided Fuzzing</em>, Van-Thuan Pham, Toby Murray,
 Benjamin Rubinstein.</li>
