--- a/pubs.html
+++ b/pubs.html
@@ -494,6 +494,25 @@ Randomized Smoothing</em>. arXiv:2405.08892 [cs.LG]. May. 2024 [<a
 href="https://arxiv.org/abs/2405.08892">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-huang24certed">
+@misc{huang24certed,
+  title = {{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
+  author = {Zhuoqun Huang and Neil G. Marchant and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note = {arXiv:2408.00728 [cs.CL]},
+  year = {2024},
+  month = {August},
+}
+</code></pre></div>
+
+<ul>
+<li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
+Rubinstein. <em>CERT-ED: Certifiably Robust Text Classification for Edit
+Distance</em>. arXiv:2408.00728 [cs.CL]. Aug. 2024 [<a
+href="https://arxiv.org/abs/2408.00728">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2023</h3>
