--- a/pubs.html
+++ b/pubs.html
@@ -323,7 +323,8 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 Benjamin I. P. Rubinstein. “Et Tu Certifications: Robustness
 Certificates Yield Better Adversarial Examples”. In: <em>Proceedings of
 the 41st International Conference on Machine Learning</em>. ICML.
-Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>;
+Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a
+href="https://www.youtube.com/watch?v=Rm3fwkGzzy0">video</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2024et.bib', 'bibtex-cullen2024et')">BibTeX</a>]</li>
 </ul>
 
@@ -411,6 +412,28 @@ Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
 of the Association for Computational Linguistics (TACL)</em> (2024).
 Accepted. [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-jin2024getting">
+@inproceedings{jin2024getting,
+  title = {Getting a-Round Guarantees: Floating-Point Attacks on Certified
+  Robustness},
+  author = {Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  year = {2024},
+  booktitle = {Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
+  series = {AISec},
+  note = {Accepted; co-located with CCS2024},
+}
+</code></pre></div>
+
+<ul>
+<li>Jin, Jiankai, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
+“Getting a-Round Guarantees: Floating-Point Attacks on Certified
+Robustness”. In: <em>Proceedings of the 17th ACM Workshop on Security
+and Artificial Intelligence</em>. AISec. Accepted; co-located with
+CCS2024. 2024 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('jin2024getting.bib', 'bibtex-jin2024getting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -822,26 +845,6 @@ Interpretable Models”. In: <em>Proceedings of the IJCAI 2023 Workshop on
 XAI</em>. Co-located with IJCAI. Accepted. 2023 [<a
 href="https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023comparison.bib', 'bibtex-zhang2023comparison')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-jin2022getting">
-@misc{jin2022getting,
-  title = {Getting a-Round Guarantees: Floating-Point Attacks on Certified
-  Robustness},
-  author = {Jiankai Jin and Olga Ohrimenko and Benjamin I. P. Rubinstein},
-  note = {arXiv:2205.10159 [cs.CR]},
-  year = {2023},
-  month = {Feb},
-}
-</code></pre></div>
-
-<ul>
-<li>Jin, Jiankai, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
-<em>Getting a-Round Guarantees: Floating-Point Attacks on Certified
-Robustness</em>. arXiv:2205.10159 [cs.CR]. Feb. 2023 [<a
-href="https://arxiv.org/abs/2205.10159">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('jin2022getting.bib', 'bibtex-jin2022getting')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-2" class="section level3">
