--- a/pubs.html
+++ b/pubs.html
@@ -462,6 +462,26 @@ for Space</em>. AI4Space. Accepted; co-located with CVPR2024. 2024
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-oetomo24warm">
+@inproceedings{oetomo24warm,
+  title = {Warm-Starting Contextual Bandits under Latent Reward Scaling},
+  year = {2024},
+  author = {Bastian Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  booktitle = {2024 IEEE 16th International Conference on Data Mining},
+  series = {ICDM},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and
+Benjamin I. P. Rubinstein. “Warm-Starting Contextual Bandits under
+Latent Reward Scaling”. In: <em>2024 IEEE 16th International Conference
+on Data Mining</em>. ICDM. Accepted. 2024
+[<a style="cursor: pointer;" onclick="DownloadToFile('oetomo24warm.bib', 'bibtex-oetomo24warm')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2024adaptive">
 @misc{marchant2024adaptive,
   title = {Adaptive Data Analysis for Growing Data},
