EMNLP findings accept

--- a/pubs.html
+++ b/pubs.html
@@ -415,6 +415,26 @@ Accepted. [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-huang24certed">
+@inproceedings{huang24certed,
+  title = {{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
+  author = {Zhuoqun Huang and Neil G. Marchant and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2024},
+  year = {2024},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
+Rubinstein. “CERT-ED: Certifiably Robust Text Classification for Edit
+Distance”. In: <em>Findings of the Association for Computational
+Linguistics: EMNLP 2024</em>. Accepted. 2024 [<a
+href="https://arxiv.org/abs/2408.00728">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-jin2024getting">
 @inproceedings{jin2024getting,
   title = {Getting a-Round Guarantees: Floating-Point Attacks on Certified
@@ -536,25 +556,6 @@ href="https://arxiv.org/abs/2404.19597">PDF</a>;
 Randomized Smoothing</em>. arXiv:2405.08892 [cs.LG]. May. 2024 [<a
 href="https://arxiv.org/abs/2405.08892">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-huang24certed">
-@misc{huang24certed,
-  title = {{CERT-ED}: Certifiably Robust Text Classification for Edit Distance},
-  author = {Zhuoqun Huang and Neil G. Marchant and Olga Ohrimenko and Benjamin I. P. Rubinstein},
-  note = {arXiv:2408.00728 [cs.CL]},
-  year = {2024},
-  month = {August},
-}
-</code></pre></div>
-
-<ul>
-<li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
-Rubinstein. <em>CERT-ED: Certifiably Robust Text Classification for Edit
-Distance</em>. arXiv:2408.00728 [cs.CL]. Aug. 2024 [<a
-href="https://arxiv.org/abs/2408.00728">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
