--- a/pubs.html
+++ b/pubs.html
@@ -401,7 +401,8 @@ href="https://arxiv.org/abs/2404.02393">PDF</a>;
   author = {Xuanli He and Qiongkai Xu and Jun Wang and Benjamin I. P. Rubinstein and Trevor Cohn},
   journal = {Transactions of the Association for Computational Linguistics (TACL)},
   year = {2024},
-  note = {Accepted},
+  pages = {996--1010},
+  volume = {12},
 }
 </code></pre></div>
 
@@ -409,8 +410,8 @@ href="https://arxiv.org/abs/2404.02393">PDF</a>;
 <li>He, Xuanli, Qiongkai Xu, Jun Wang, Benjamin I. P. Rubinstein, and
 Trevor Cohn. “SEEP: Training Dynamics Grounds Latent Representation
 Search for Mitigating Backdoor Poisoning Attacks”. In: <em>Transactions
-of the Association for Computational Linguistics (TACL)</em> (2024).
-Accepted. [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
+of the Association for Computational Linguistics (TACL)</em> 12 (2024),
+pp. 996-1010 [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('he2024seep.bib', 'bibtex-he2024seep')">BibTeX</a>]</li>
 </ul>
 
