--- a/pubs.html
+++ b/pubs.html
@@ -458,28 +458,25 @@ CCS2024. 2024 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>;
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-ortiz2024mitigating">
-@inproceedings{ortiz2024mitigating,
-  title = {Mitigating Challenges of the Space Environment for Onboard Artificial Intelligence: Design Overview of the Imaging Payload on {SpIRIT}},
+<pre><code id="bibtex-joukhadar2024designing">
+@inproceedings{joukhadar2024designing,
+  author = {Zaher Joukhadar and Jonathan Morgan and Christopher Bayliss and Miguel {Ortiz del Castillo} and Jack McRobbie and Robert Mearns and Krista A. Ehinger and Benjamin I. P. Rubinstein and Richard Sinnott and Michele Trenti and James Bailey},
+  title = {Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
   year = {2024},
-  author = {Miguel {Ortiz del Castillo} and Jonathan Morgan and Jack McRobbie and Clint Therakam and Zaher Joukhadar and Robert Mearns and Simon Barraclough and Richard Sinnott and Andrew Woods and Chris Bayliss and Kris Ehinger and Ben Rubinstein and James Bailey and Airlie Chapman and Michele Trenti},
-  booktitle = {3rd Workshop on AI for Space},
-  series = {AI4Space},
-  note = {Accepted; co-located with CVPR2024},
+  note = {Accepted},
+  booktitle = {37th Australasian Joint Conference on Artificial Intelligence},
+  series = {AJCAI},
 }
 </code></pre></div>
 
 <ul>
-<li>Ortiz del Castillo, Miguel, Jonathan Morgan, Jack McRobbie, Clint
-Therakam, Zaher Joukhadar, Robert Mearns, Simon Barraclough, Richard
-Sinnott, Andrew Woods, Chris Bayliss, Kris Ehinger, Ben Rubinstein,
-James Bailey, Airlie Chapman, and Michele Trenti. “Mitigating Challenges
-of the Space Environment for Onboard Artificial Intelligence: Design
-Overview of the Imaging Payload on SpIRIT”. In: <em>3rd Workshop on AI
-for Space</em>. AI4Space. Accepted; co-located with CVPR2024. 2024
-[<span style="color:red">Best Paper Award (Honourable Mention)</span>;
-<a href="https://arxiv.org/abs/2404.08399">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('ortiz2024mitigating.bib', 'bibtex-ortiz2024mitigating')">BibTeX</a>]</li>
+<li>Joukhadar, Zaher, Jonathan Morgan, Christopher Bayliss, Miguel Ortiz
+del Castillo, Jack McRobbie, Robert Mearns, Krista A. Ehinger, Benjamin
+I. P. Rubinstein, Richard Sinnott, Michele Trenti, and James Bailey.
+“Designing an Adaptive AI System for Operation on Board a
+Nano-satellite”. In: <em>37th Australasian Joint Conference on
+Artificial Intelligence</em>. AJCAI. Accepted. 2024
+[<a style="cursor: pointer;" onclick="DownloadToFile('joukhadar2024designing.bib', 'bibtex-joukhadar2024designing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
