--- a/pubs.html
+++ b/pubs.html
@@ -307,6 +307,25 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <h3>2024</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-rekavandi2024certified">
+@inproceedings{rekavandi2024certified,
+  author = {Aref Miri Rekavandi and Farhad Farokhi and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  title = {Certified Adversarial Robustness via Randomized alpha-Smoothing for Regression Models},
+  year = {2024},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series = {NeurIPS},
+}
+</code></pre></div>
+
+<ul>
+<li>Rekavandi, Aref Miri, Farhad Farokhi, Olga Ohrimenko, and Benjamin
+I. P. Rubinstein. “Certified Adversarial Robustness via Randomized
+alpha-Smoothing for Regression Models”. In: <em>Advances in Neural
+Information Processing Systems</em>. NeurIPS. Accepted. 2024
+[<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi2024certified.bib', 'bibtex-rekavandi2024certified')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-cullen2024et">
 @inproceedings{cullen2024et,
   title = {Et Tu Certifications: Robustness Certificates Yield Better Adversarial Examples},
