repo for EMNLP24 knitted

--- a/pubs.html
+++ b/pubs.html
@@ -450,7 +450,8 @@ pp. 996-1010 [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
 Rubinstein. “CERT-ED: Certifiably Robust Text Classification for Edit
 Distance”. In: <em>Findings of the Association for Computational
 Linguistics: EMNLP 2024</em>. Accepted. 2024 [<a
-href="https://arxiv.org/abs/2408.00728">PDF</a>;
+href="https://arxiv.org/abs/2408.00728">PDF</a>; <a
+href="https://github.com/Dovermore/nlp-smoothing-software">code</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
 </ul>
 
