--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Ben Rubinstein
 <p><img src="images/Ben1.jpg" style="width:30%; border:12px solid; margin-right: 24px" align="left"></p>
 <strong>Benjamin I. P. Rubinstein</strong>, PhD (Berkeley)<br>
 <p style="font-size:16px">
-Professor &amp; AI co-lead, <em>School of Computing and Information
+Professor in AI, <em>School of Computing and Information
 Systems</em><br> Deputy Dean Research (Interim), <em>Faculty of
 Engineering and Information Technology</em><br> <em>The University of
 Melbourne, Australia</em>
