--- a/pubs.html
+++ b/pubs.html
@@ -304,6 +304,29 @@ you’re having trouble accessing any paper at a publisher’s site, just
 contact me for a PDF by email. My responses to government consultations
 are <a href="impact.html#policy_submissions">here</a>.</p>
 <div id="section" class="section level3">
+<h3>2025</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2025multilevel">
+@inproceedings{liu2025multilevel,
+  author = {Shijie Liu and Andrew C. Cullen and Paul Montague and Sarah M. Erfani and Benjamin I. P. Rubinstein},
+  title = {Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
+  year = {2025},
+  note = {Accepted},
+  booktitle = {The Thirteenth International Conference on Learning Representations},
+  series = {ICLR},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Shijie, Andrew C. Cullen, Paul Montague, Sarah M. Erfani, and
+Benjamin I. P. Rubinstein. “Multi-level Certified Defense Against
+Poisoning Attacks in Offline Reinforcement Learning”. In: <em>The
+Thirteenth International Conference on Learning Representations</em>.
+ICLR. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2025multilevel.bib', 'bibtex-liu2025multilevel')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2024</h3>
 
 <div class="bibox" style="display: none;">
@@ -576,7 +599,7 @@ href="https://arxiv.org/abs/2405.08892">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2023</h3>
 
 <div class="bibox" style="display: none;">
@@ -886,7 +909,7 @@ href="https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023comparison.bib', 'bibtex-zhang2023comparison')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2022</h3>
 
 <div class="bibox" style="display: none;">
@@ -1160,7 +1183,7 @@ href="https://arxiv.org/abs/2207.11575">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('bachfischer22testing.bib', 'bibtex-bachfischer22testing')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
@@ -1512,7 +1535,7 @@ href="https://ieeexplore.ieee.org/document/9610045">publisher link</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('wang2021machine.bib', 'bibtex-wang2021machine')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2020</h3>
 
 <div class="bibox" style="display: none;">
@@ -1755,7 +1778,7 @@ href="https://arxiv.org/abs/2006.13120">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('gelbhart2020discrete.bib', 'bibtex-gelbhart2020discrete')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
@@ -1930,7 +1953,7 @@ href="https://arxiv.org/pdf/1902.07500">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -2091,7 +2114,7 @@ Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan.
 <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -2350,7 +2373,7 @@ href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -2564,7 +2587,7 @@ Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv:
 <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -2683,7 +2706,7 @@ href="http://link.springer.com/article/10.1007/s10707-015-0228-8">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -2757,7 +2780,7 @@ href="https://dl.acm.org/citation.cfm?id=2666652&amp;picked=prox">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -2951,7 +2974,7 @@ href="http://dx.doi.org/10.1145/2382196.2382327">publisher link</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -3066,7 +3089,7 @@ href="http://dl.acm.org/citation.cfm?id=2046684&amp;coll=DL&amp;dl=GUIDE&amp;CFI
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-13" class="section level3">
+<div id="section-14" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -3153,7 +3176,7 @@ href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf">PDF</a>
 <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-14" class="section level3">
+<div id="section-15" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -3286,7 +3309,7 @@ href="http://repository.unimelb.edu.au/10187/5774">full</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-15" class="section level3">
+<div id="section-16" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -3398,7 +3421,7 @@ href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf">PDF</a>
 <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-16" class="section level3">
+<div id="section-17" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
