--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@ Ben Rubinstein
 <strong>Benjamin I. P. Rubinstein</strong>, PhD (Berkeley)<br>
 <p style="font-size:16px">
 Professor in AI, <em>School of Computing and Information
-Systems</em><br> Deputy Dean Research (Interim), <em>Faculty of
-Engineering and Information Technology</em><br> <em>The University of
-Melbourne, Australia</em>
+Systems</em><br> Deputy Dean (Research), <em>Faculty of Engineering and
+Information Technology</em><br> <em>The University of Melbourne,
+Australia</em>
 </p>
 <p>I actively research topics in machine learning, particularly security
 and privacy implications of AI, such as adversarial learning,
@@ -315,11 +315,11 @@ differential privacy and record linkage. Prior to joining the University
 of Melbourne in 2013, I enjoyed four years in industry research labs
 including Microsoft Research Silicon Valley and IBM Research Australia,
 and received the PhD (Computer Science) from UC Berkeley in 2010. I’m
-currently a full professor and interim Deputy Dean (Research), and was
-Associate Dean (Research) 2020–2023. I have been part of teams that
-have: analysed privacy at the Australian Bureau of Statistics, National
-Australia Bank, and Transport for NSW; robustness of translation systems
-to data poisoning attacks with Facebook (Meta); helped identify and plug
+currently a full professor and Deputy Dean (Research), and was Associate
+Dean (Research) 2020–2023. I have been part of teams that have: analysed
+privacy at the Australian Bureau of Statistics, National Australia Bank,
+and Transport for NSW; robustness of translation systems to data
+poisoning attacks with Facebook (Meta); helped identify and plug
 side-channel attacks against the Firefox browser; deanonymised Victorian
 Myki transport data and an unprecedented Australian Medicare data
 release, prompting introduction of the Re-identification Offence Bill
