--- a/index.html
+++ b/index.html
@@ -309,28 +309,32 @@ Systems</em><br> Deputy Dean (Research), <em>Faculty of Engineering and
 Information Technology</em><br> <em>The University of Melbourne,
 Australia</em>
 </p>
-<p>I actively research topics in machine learning, particularly security
-and privacy implications of AI, such as adversarial learning,
-differential privacy and record linkage. Prior to joining the University
-of Melbourne in 2013, I enjoyed four years in industry research labs
-including Microsoft Research Silicon Valley and IBM Research Australia,
-and received the PhD (Computer Science) from UC Berkeley in 2010. I’m
-currently a full professor and Deputy Dean (Research), and was Associate
-Dean (Research) 2020–2023. I have been part of teams that have: analysed
-privacy at the Australian Bureau of Statistics, National Australia Bank,
-and Transport for NSW; robustness of translation systems to data
-poisoning attacks with Facebook (Meta); helped identify and plug
-side-channel attacks against the Firefox browser; deanonymised Victorian
-Myki transport data and an unprecedented Australian Medicare data
-release, prompting introduction of the Re-identification Offence Bill
-2016; developed scalable Bayesian approaches to record linkage tested by
-U.S. Census; and shipped production systems for record linkage in Bing
-and the Xbox360. Since joining Melbourne in 2013, I have been awarded
-$10.94m in competitive funding ($7.45m as lead) to my institution. Over
-2021-24, I was co-lead of <a href="https://catch-muri.org">CATCH
-MURI</a>, convening a team of 16 experts across 6 US/AUS universities
-for fundamental discovery in robust human-AI teams for
-cybersecurity.</p>
+<p>I research AI safety, spanning the security and privacy of AI, as a
+Professor and Deputy Dean (Research) at the University of Melbourne’s
+Faculty of Engineering &amp; IT. Prior to returning to academia in 2013,
+I enjoyed four years in industry research labs including Microsoft
+Research Silicon Valley and IBM Research Australia, and previously
+received the PhD (Computer Science) from UC Berkeley in 2010. I have
+been part of teams that have: analysed privacy at the Australian Bureau
+of Statistics, National Australia Bank, and Transport for NSW;
+robustness of translation systems to data poisoning attacks with
+Facebook (Meta); helped identify and plug side-channel attacks against
+the Firefox browser; deanonymised Victorian Myki transport data and an
+unprecedented Australian Medicare data release, prompting introduction
+of the Re-identification Offence Bill 2016; developed scalable Bayesian
+approaches to record linkage tested by U.S. Census; and shipped
+production systems for record linkage in Microsoft’s Bing and the
+Xbox360. Since joining Melbourne in 2013, I have been awarded $10.94m in
+competitive funding ($7.45m as lead) to my institution. Over 2021-24, I
+was co-lead of <a href="https://catch-muri.org">CATCH MURI</a>,
+convening a team of 16 experts across 6 US/AUS universities for
+fundamental discovery in robust human-AI teams for cybersecurity. I have
+been a member of the Australian Academy of Sciences <a
+href="https://www.science.org.au/supporting-science/national-committees-science/information-communication-sciences">NCICS</a>,
+<a
+href="https://cis.unimelb.edu.au/news/2022/joint-statement-on-rankings-in-computer-science">Computing</a>
+@ <a href="https://go8.edu.au/">Go8</a>, and the <a
+href="https://kingstonaigroup.org.au/">Kingston AI Group</a>.</p>
 
 
 
