--- a/pubs.html
+++ b/pubs.html
@@ -323,7 +323,9 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 Benjamin I. P. Rubinstein. “Multi-level Certified Defense Against
 Poisoning Attacks in Offline Reinforcement Learning”. In: <em>The
 Thirteenth International Conference on Learning Representations</em>.
-ICLR. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2025multilevel.bib', 'bibtex-liu2025multilevel')">BibTeX</a>]</li>
+ICLR. Accepted. 2025 [<a
+href="https://openreview.net/forum?id=X2x2DuGIbx">publisher link</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('liu2025multilevel.bib', 'bibtex-liu2025multilevel')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
@@ -337,6 +339,7 @@ ICLR. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('liu20
   year = {2024},
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
+  pages = {134127--134150},
 }
 </code></pre></div>
 
@@ -344,8 +347,10 @@ ICLR. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('liu20
 <li>Rekavandi, Aref Miri, Farhad Farokhi, Olga Ohrimenko, and Benjamin
 I. P. Rubinstein. “Certified Adversarial Robustness via Randomized
 alpha-Smoothing for Regression Models”. In: <em>Advances in Neural
-Information Processing Systems</em>. NeurIPS. Accepted. 2024
-[<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi2024certified.bib', 'bibtex-rekavandi2024certified')">BibTeX</a>]</li>
+Information Processing Systems</em>. NeurIPS. 2024, pp. 134127-134150
+[<a
+href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/f21a76d688be0553c943a6b6c1d4bb1f-Abstract-Conference.html">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi2024certified.bib', 'bibtex-rekavandi2024certified')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -356,7 +361,7 @@ Information Processing Systems</em>. NeurIPS. Accepted. 2024
   year = {2024},
   booktitle = {Proceedings of the 41st International Conference on Machine Learning},
   series = {ICML},
-  note = {Accepted},
+  pages = {9745--9761},
 }
 </code></pre></div>
 
@@ -364,10 +369,11 @@ Information Processing Systems</em>. NeurIPS. Accepted. 2024
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and
 Benjamin I. P. Rubinstein. “Et Tu Certifications: Robustness
 Certificates Yield Better Adversarial Examples”. In: <em>Proceedings of
-the 41st International Conference on Machine Learning</em>. ICML.
-Accepted. 2024 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a
-href="https://www.youtube.com/watch?v=Rm3fwkGzzy0">video</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('cullen2024et.bib', 'bibtex-cullen2024et')">BibTeX</a>]</li>
+the 41st International Conference on Machine Learning</em>. ICML. 2024,
+pp. 9745-9761 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a
+href="https://www.youtube.com/watch?v=Rm3fwkGzzy0">video</a>; <a
+href="https://proceedings.mlr.press/v235/cullen24a.html">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2024et.bib', 'bibtex-cullen2024et')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -378,7 +384,7 @@ href="https://www.youtube.com/watch?v=Rm3fwkGzzy0">video</a>;
   year = {2024},
   booktitle = {Proceedings of the 2024 ACM SIGSAC Conference on Computer and Communications Security},
   series = {CCS},
-  note = {Accepted},
+  pages = {1909--1923},
 }
 </code></pre></div>
 
@@ -387,9 +393,10 @@ href="https://www.youtube.com/watch?v=Rm3fwkGzzy0">video</a>;
 P. Rubinstein, Yuval Yarom, and Olga Ohrimenko. “Elephants Do Not
 Forget: Differential Privacy with State Continuity for Privacy Budget”.
 In: <em>Proceedings of the 2024 ACM SIGSAC Conference on Computer and
-Communications Security</em>. CCS. Accepted. 2024 [<a
-href="https://arxiv.org/abs/2401.17628">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('jin2024elephants.bib', 'bibtex-jin2024elephants')">BibTeX</a>]</li>
+Communications Security</em>. CCS. 2024, pp. 1909-1923 [<a
+href="https://arxiv.org/abs/2401.17628">PDF</a>; <a
+href="https://dl.acm.org/doi/10.1145/3658644.3670281">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2024elephants.bib', 'bibtex-jin2024elephants')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -400,7 +407,7 @@ href="https://arxiv.org/abs/2401.17628">PDF</a>;
   year = {2024},
   booktitle = {2024 IEEE Symposium on Security and Privacy},
   series = {SP},
-  note = {Accepted},
+  pages = {2886--2900},
 }
 </code></pre></div>
 
@@ -408,8 +415,9 @@ href="https://arxiv.org/abs/2401.17628">PDF</a>;
 <li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Erfani, and
 Benjamin I. P. Rubinstein. “It’s Simplex! Disaggregating Measures to
 Improve Certified Robustness”. In: <em>2024 IEEE Symposium on Security
-and Privacy</em>. SP. Accepted. 2024 [<a
-href="https://arxiv.org/abs/2309.11005">PDF</a>;
+and Privacy</em>. SP. 2024, pp. 2886-2900 [<a
+href="https://arxiv.org/abs/2309.11005">PDF</a>; <a
+href="https://ieeexplore.ieee.org/document/10646689">publisher link</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023its.bib', 'bibtex-cullen2023its')">BibTeX</a>]</li>
 </ul>
 
@@ -420,7 +428,7 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
   author = {Jun Wang and Qiongkai Xu and Xuanli He and Benjamin I. P. Rubinstein and Trevor Cohn},
   booktitle = {Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
   series = {NAACL},
-  note = {Accepted},
+  pages = {4515--4534},
   year = {2024},
 }
 </code></pre></div>
@@ -430,9 +438,10 @@ href="https://arxiv.org/abs/2309.11005">PDF</a>;
 Trevor Cohn. “Backdoor Attacks on Multilingual Machine Translation”. In:
 <em>Proceedings of the 2024 Conference of the North American Chapter of
 the Association for Computational Linguistics: Human Language
-Technologies</em>. NAACL. Accepted. 2024 [<span
+Technologies</em>. NAACL. 2024, pp. 4515-4534 [<span
 style="color:red">Selected as Oral (15% of accepted papers)</span>; <a
-href="https://arxiv.org/abs/2404.02393">PDF</a>;
+href="https://arxiv.org/abs/2404.02393">PDF</a>; <a
+href="https://aclanthology.org/2024.naacl-long.254/">publisher link</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('wang2024backdoor.bib', 'bibtex-wang2024backdoor')">BibTeX</a>]</li>
 </ul>
 
@@ -464,7 +473,7 @@ pp. 996-1010 [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
   author = {Zhuoqun Huang and Neil G. Marchant and Olga Ohrimenko and Benjamin I. P. Rubinstein},
   booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2024},
   year = {2024},
-  note = {Accepted},
+  pages = {10813--10835},
 }
 </code></pre></div>
 
@@ -472,10 +481,11 @@ pp. 996-1010 [<a href="https://arxiv.org/abs/2405.11575">PDF</a>;
 <li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
 Rubinstein. “CERT-ED: Certifiably Robust Text Classification for Edit
 Distance”. In: <em>Findings of the Association for Computational
-Linguistics: EMNLP 2024</em>. Accepted. 2024 [<a
+Linguistics: EMNLP 2024</em>. 2024, pp. 10813-10835 [<a
 href="https://arxiv.org/abs/2408.00728">PDF</a>; <a
-href="https://github.com/Dovermore/nlp-smoothing-software">code</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
+href="https://github.com/Dovermore/nlp-smoothing-software">code</a>; <a
+href="https://aclanthology.org/2024.findings-emnlp.635/">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang24certed.bib', 'bibtex-huang24certed')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -487,7 +497,8 @@ href="https://github.com/Dovermore/nlp-smoothing-software">code</a>;
   year = {2024},
   booktitle = {Proceedings of the 17th ACM Workshop on Security and Artificial Intelligence},
   series = {AISec},
-  note = {Accepted; co-located with CCS2024},
+  pages = {53--64},
+  note = {co-located with CCS2024},
 }
 </code></pre></div>
 
@@ -495,9 +506,10 @@ href="https://github.com/Dovermore/nlp-smoothing-software">code</a>;
 <li>Jin, Jiankai, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
 “Getting a-Round Guarantees: Floating-Point Attacks on Certified
 Robustness”. In: <em>Proceedings of the 17th ACM Workshop on Security
-and Artificial Intelligence</em>. AISec. Accepted; co-located with
-CCS2024. 2024 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('jin2024getting.bib', 'bibtex-jin2024getting')">BibTeX</a>]</li>
+and Artificial Intelligence</em>. AISec. co-located with CCS2024. 2024,
+pp. 53-64 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>; <a
+href="https://dl.acm.org/doi/10.1145/3689932.3694761">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2024getting.bib', 'bibtex-jin2024getting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -506,7 +518,7 @@ CCS2024. 2024 [<a href="https://arxiv.org/abs/2205.10159">PDF</a>;
   author = {Zaher Joukhadar and Jonathan Morgan and Christopher Bayliss and Miguel {Ortiz del Castillo} and Jack McRobbie and Robert Mearns and Krista A. Ehinger and Benjamin I. P. Rubinstein and Richard Sinnott and Michele Trenti and James Bailey},
   title = {Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
   year = {2024},
-  note = {Accepted},
+  note = {In press},
   booktitle = {37th Australasian Joint Conference on Artificial Intelligence},
   series = {AJCAI},
 }
@@ -518,7 +530,7 @@ del Castillo, Jack McRobbie, Robert Mearns, Krista A. Ehinger, Benjamin
 I. P. Rubinstein, Richard Sinnott, Michele Trenti, and James Bailey.
 “Designing an Adaptive AI System for Operation on Board a
 Nano-satellite”. In: <em>37th Australasian Joint Conference on
-Artificial Intelligence</em>. AJCAI. Accepted. 2024
+Artificial Intelligence</em>. AJCAI. In press. 2024
 [<a style="cursor: pointer;" onclick="DownloadToFile('joukhadar2024designing.bib', 'bibtex-joukhadar2024designing')">BibTeX</a>]</li>
 </ul>
 
@@ -530,7 +542,7 @@ Artificial Intelligence</em>. AJCAI. Accepted. 2024
   author = {Bastian Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
   booktitle = {2024 IEEE 16th International Conference on Data Mining},
   series = {ICDM},
-  note = {Accepted},
+  note = {In press},
 }
 </code></pre></div>
 
@@ -538,7 +550,7 @@ Artificial Intelligence</em>. AJCAI. Accepted. 2024
 <li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and
 Benjamin I. P. Rubinstein. “Warm-Starting Contextual Bandits under
 Latent Reward Scaling”. In: <em>2024 IEEE 16th International Conference
-on Data Mining</em>. ICDM. Accepted. 2024
+on Data Mining</em>. ICDM. In press. 2024
 [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo24warm.bib', 'bibtex-oetomo24warm')">BibTeX</a>]</li>
 </ul>
 
@@ -610,7 +622,7 @@ href="https://arxiv.org/abs/2405.08892">PDF</a>;
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
   year = {2023},
-  note = {Accepted},
+  pages = {18676--18711},
 }
 </code></pre></div>
 
@@ -619,10 +631,11 @@ href="https://arxiv.org/abs/2405.08892">PDF</a>;
 Ohrimenko, and Benjamin I. P. Rubinstein. “RS-Del: Edit Distance
 Robustness Certificates for Sequence Classifiers via Randomized
 Deletion”. In: <em>Advances in Neural Information Processing
-Systems</em>. NeurIPS. Accepted. 2023 [<a
+Systems</em>. NeurIPS. 2023, pp. 18676-18711 [<a
 href="https://arxiv.org/abs/2302.01757">PDF</a>; <a
-href="https://neurips.cc/virtual/2023/poster/70896">publisher link</a>;
-<a href="https://github.com/Dovermore/randomized-deletion">code</a>;
+href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/3ba82362eb0aa75487069f19fde794fe-Abstract-Conference.html">publisher
+link</a>; <a
+href="https://github.com/Dovermore/randomized-deletion">code</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('huang2023rsdel.bib', 'bibtex-huang2023rsdel')">BibTeX</a>]</li>
 </ul>
 
@@ -680,8 +693,9 @@ link</a>; <a href="https://arxiv.org/abs/2308.07553">full</a>;
   author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   journal = {IEEE Transactions on Knowledge and Data Engineering},
   year = {2023},
-  note = {Accepted},
-  pages = {18},
+  pages = {12855--12872},
+  volume = {35},
+  number = {12},
 }
 </code></pre></div>
 
@@ -689,8 +703,8 @@ link</a>; <a href="https://arxiv.org/abs/2308.07553">full</a>;
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and
 Renata Borovica-Gajic. “No DBA? No regret! Multi-armed bandits for index
 tuning of analytical and HTAP workloads with provable guarantees”. In:
-<em>IEEE Transactions on Knowledge and Data Engineering</em> (2023).
-Accepted, p. 18 [<a
+<em>IEEE Transactions on Knowledge and Data Engineering</em> 35.12
+(2023), pp. 12855-12872 [<a
 href="https://ieeexplore.ieee.org/document/10113193">publisher link</a>;
 <a href="https://arxiv.org/abs/2108.10130">full</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('perera2023nodba.bib', 'bibtex-perera2023nodba')">BibTeX</a>]</li>
@@ -885,7 +899,7 @@ href="https://doi.org/10.1145/3605157.3605177">publisher link</a>;
 <li>Zhang, Ruihan, Tim Miller, Krista Ehinger, and Benjamin Rubinstein.
 “Make Predictions Predictable: Fast Concept-based Counterfactual
 Explanations for Images”. In: <em>Proceedings of the IJCAI 2023 Workshop
-on XAI</em>. Co-located with IJCAI. Accepted. 2023 [<a
+on XAI</em>. Co-located with IJCAI. 2023 [<a
 href="https://drive.google.com/file/d/1YCm5xVpvbMzfOoiiEWpTffuhkhKZsI7O/view?usp=sharing">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023make.bib', 'bibtex-zhang2023make')">BibTeX</a>]</li>
 </ul>
@@ -904,7 +918,7 @@ link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023make.bib
 <li>Zhang, Ruihan, Tim Miller, Krista Ehinger, and Benjamin Rubinstein.
 “Comparison of Supervised and Unsupervised Concepts in Concept-based
 Interpretable Models”. In: <em>Proceedings of the IJCAI 2023 Workshop on
-XAI</em>. Co-located with IJCAI. Accepted. 2023 [<a
+XAI</em>. Co-located with IJCAI. 2023 [<a
 href="https://drive.google.com/file/d/13MPWLMARWIKMJqeL2mazfQvOK6-QcmEG/view?usp=sharing">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2023comparison.bib', 'bibtex-zhang2023comparison')">BibTeX</a>]</li>
 </ul>
