--- a/group.html
+++ b/group.html
@@ -312,9 +312,6 @@ Zhao</a> (2024– ). Differential privacy.</li>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
-<li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin
-Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Adversarial
-learning/game theory for autonomous systems.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun
 Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie
@@ -328,18 +325,29 @@ Ohrimenko 2021– ). Systems security of differential privacy.</li>
 <li><a
 href="https://cis.unimelb.edu.au/people/students/jiacheng-zhang">Jiacheng
 Zhang</a>. (w Feng Liu 2023– ). Trustworthy ML.</li>
-<li>Maria Bulychev. (w Neil Marchant 2024– ). Adversarial learning.</li>
+<li><a
+href="https://cis.unimelb.edu.au/people/graduate-researchers/artificial-intelligence/maria-bulychev">Maria
+Bulychev</a>. (w Neil Marchant 2024– ). Watermarking GenAI and
+trustworthy AI.</li>
 <li><a
 href="https://www.linkedin.com/in/wenqi-yan-082a18223/?trk=people-guest_people_search-card&amp;originalSubdomain=au">Wenqi
 Yan</a>. (w Thuan Pham, Toby Murray 2024– ). Software fuzzing.</li>
+<li><a
+href="https://www.linkedin.com/in/jiani-xie-a79a67152/?originalSubdomain=au">Jiani
+Xie</a>. (w Andrew Cullen 2025– ). Automatic speech recognition.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin
+Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020–24). Adversarial
+learning/game theory for autonomous systems → Data scientist at
+Proa</li>
 <li><a
 href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan
-Zhang</a> (w Tim Miller, Kris Ehinger 2019–24). Explainable AI</li>
+Zhang</a> (w Tim Miller, Kris Ehinger 2019–24). Explainable AI → Postdoc
+at the State Grid Corporation of China</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata
 Borovica-Gajic 2018–23). Self-driving databases → Software engineer at
 Amazon Web Services</li>
