--- a/group.html
+++ b/group.html
@@ -312,8 +312,6 @@ Zhao</a> (2024– ). Differential privacy.</li>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
-<li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun
-Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie
 Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ).
 Certified robustness at training time.</li>
@@ -340,6 +338,8 @@ Xie</a>. (w Andrew Cullen 2025– ). Automatic speech recognition.</li>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun
+Wang</a>. (w Trevor Cohn 2020-25). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin
 Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020–24). Adversarial
 learning/game theory for autonomous systems → Data scientist at
